Add registration button

--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
       <p>It is aimed at OTP users and interested parties at all levels
       of knowledge and expertise.</p>
       <p>The event is free.</p>
+      <p><a href="https://docs.google.com/forms/d/e/1FAIpQLSdR363ujobEKi5g_cP96r6X4UVhGy2J7pyir5dbX-u9eQCJRg/viewform?usp=dialog" target="_blank">
+      <button >Register</button> </a></p>
       <h2 id="programme">Programme</h2>
       <h3
       id="monday-and-tuesday-product-owners-decision-makers-developers">Monday
@@ -63,7 +65,7 @@
       meeting. In order to get a lot of value out of it, you should be
       familiar with OTP development. It will be at:</p>
       <p>HSL Helsinki<br />
-      Opastinkuja 6<br />
+      Opastinsilta 6<br />
       Helsinki</p>
       <h2 id="register">Register</h2>
       <p>Please register to attend the event by <a
