--- a/index.html
+++ b/index.html
@@ -62,13 +62,16 @@
       <h3 id="wednesday-to-friday-developers">Wednesday to Friday:
       developers</h3>
       <p>Wednesday to Friday will be a developer-focussed working
-      meeting. In order to get a lot of value out of it, you should be
-      familiar with OTP development. It will be at:</p>
-      <p>HSL Helsinki<br />
+      meeting. To get a lot of value out of it, you should be familiar
+      with OTP development. It will be at:</p>
+      <p>HSL Helsinki (<a
+      href="https://www.openstreetmap.org/node/2136579378">OSM</a>, <a
+      href="https://maps.app.goo.gl/32ER7zoCjRn56u1v7">Google
+      Maps</a>)<br />
       Opastinsilta 6<br />
       Helsinki</p>
       <h2 id="register">Register</h2>
-      <p>Please register to attend the event by <a
+      <p>Please register to attend by <a
       href="https://docs.google.com/forms/d/e/1FAIpQLSdR363ujobEKi5g_cP96r6X4UVhGy2J7pyir5dbX-u9eQCJRg/viewform?usp=dialog">filling
       out this form</a> as it helps us to plan the event better.</p>
       <h2 id="who-will-be-there">Who will be there?</h2>
